# LinuxApplicationDevelopment2024

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  outlib.h  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  test1.gdb  test1.ref.txt  test2.gdb  test2.ref.txt
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  test.sh  unlink.c
07_Environmental/: Makefile.am  README.md  configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/tests/: test.sh  tests.sh
08_I18n/: Makefile.am  README.md  configure.ac  guess.c  ru.po
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_Patch_Diff/: 01.patch  02.patch  03.patch  Makefile  lab0.c
10_LibTesting/: Makefile.am  README.md  configure.ac
10_LibTesting/src/: Makefile.am  libbuf.c  libbuf.h
10_LibTesting/tests/: Makefile.am  upstream.ts
11_Documenting/: Makefile.am
11_Documenting/src/: Makefile.am  generate_roman_table.py  guess.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  generate_roman_table.py  guess.c  libroman.c  libroman.h
12_InstallPackaging/tests/: Makefile.am  upstream.ts
